--- a/admin/src/assets/css/index.css
+++ b/admin/src/assets/css/index.css
@@ -1,2 +1,8 @@
 #app,body,h1,html,p{margin:0;padding:0}
 body{width:100%;height:100vh;}
+.el-breadcrumb{
+  margin-bottom: 10px;
+}
+.el-main{
+  line-height: 0px!important;
+}
