--- a/admin/src/assets/css/index.css
+++ b/admin/src/assets/css/index.css
@@ -1,5 +1,5 @@
-#app,body,h1,html,p{margin:0;padding:0}
-body{width:100%;height:100vh;}
+#app,body,h1,html,p{margin:0;padding:0;}
+html,body,#app{width:100%;height:100%;}
 .el-breadcrumb{
   margin-bottom: 10px;
 }
